--- a/EAindex.html
+++ b/EAindex.html
@@ -29,17 +29,20 @@
     </div>
   </nav>
 
+  <div class="szünet"> </div>
   <h1> Üdvözöllek Kedves Látogató, Kedves Menyasszony és Vőlegény!</h1>
 
+  <div class="szünet"> </div>
   <h2><b>Azaz kedves leendő ifjú Feleség és Férj!</b> </h2>
-
-
+  <div class="szünet"> </div>
   
+  <div class="szünet"> </div>
 
 
   <div class="row align-items-center">
     <div class="col-12 col-md-8" class="középszöveg">
       <h4> Ti megálmodjátok, mi megvalósítjuk!</h4>
+      <div class="szünet"> </div>
       <p> Az <span class="bold">Ever After Esküvői Dekor </span> csapata felkészült minden lehetetlennek tűnő
         dekorációs feladatra.</p>
       <p>Válasszatok minket, Kedves Jegyespár és mindent megteszünk annak érdekében, hogy az általatok megálmodott
@@ -70,7 +73,7 @@
   </div>
 
   <div class="row align-items-center">
-    <div class="col-12 col-md-8"class="szövegközép">
+    <div class="col-12 col-md-8" class="szövegközép">
       <p class="bold" style="text-align: left;"> Miért bízd ránk a dekorációt? </p>
       <ul>
         <li>A Ti álmaitokat fogjuk megvalósítani</li>
@@ -84,8 +87,7 @@
         autódíszek,
         virágos hajcsatok, lampionok...stb. A lehetséges dekorválasztékot szinte a végtelenig - vagy legalábbis a
         kreatív
-        menyasszonyok fantáziájának határáig- sorolhatnánk.</p>
-    </div>
+        menyasszonyok fantáziájának határáig- sorolhatnánk.</p> </div>
     <div class="col-6 col-md-4"><img class="szövegkép" src="IMG/Háttérképek/terem1Ad.JPG" alt="terem_1"></div>
   </div>
 
@@ -97,21 +99,24 @@
     <p> Reméljük, elnyertük a tetszéseteket, így lehetőségünk nyílik dekorációnkkal még szebbé varázsolni az
       esküvőtöket!
     </p>
-    <p>Keressetek minket bátran e-mailen és telefonon!</p>
+    <p>Keressetek minket bátran e-mailen és telefonon!
+    </p>
   </div>
   <div> <img class="szövegkép" src="IMG/Kézműves/Főasztal.JPG" alt="főasztal"> </div>
 
-
-
-
-  <img class="profilkép" src="IMG/Profil képek/HFE.jpg" alt="Eszter">
+  <div class="szünet"> </div>
   <h1>Kapcsolat</h1>
-  <p class="idézet">"Ha kérdésed van keress meg bizalommal az alábbi elérhetőségeim egyikén vagy töltsd ki
-    a <button><a href="Kapcsolat.html">Kapcsolat</a></button>oldalon található űrlapot és felveszem Veled a
-    kapcsolatot, egy Neked alkalmas időpontban." </p>
-  <p class="üdv"> Üdvözlettel:</p>
-  <p class="signo">Horváthné Forgács Eszter</p>
-
+  <div class="row align-items-center">
+    <div class="col-6 col-md-4"> <img src="IMG/Profil képek/HFE.jpg" alt="Eszter"></div>
+    <div class="col-12 col-md-8" class="szövegközép">
+      <p>"Ha kérdésed van keress meg bizalommal az alábbi elérhetőségeim egyikén vagy töltsd ki
+        a <button><a href="Kapcsolat.html">Kapcsolat</a></button>oldalon található űrlapot és felveszem Veled a
+        kapcsolatot, egy Neked alkalmas időpontban." </p>
+      <p class="üdv"> Üdvözlettel:</p>
+      <p class="signo">Horváthné Forgács Eszter</p>
+    </div>
+  </div>
+  <div class="szünet"> </div>
 
 </body>
 
