--- a/Instax bérlés.html
+++ b/Instax bérlés.html
@@ -6,8 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Instax bérlés</title>
-  <link rel="stylesheet" href="css\style.css">
-  <link rel="stylesheet" href="css\bootstrap.min">
+
+  <link rel="stylesheet" href="css\bootstrap.css">  
+  [<link rel="stylesheet" href="css\style.css">
 </head>
 
 <body>
@@ -27,20 +28,27 @@
       <button><a href="Kapcsolat.html">Kapcsolat</a></button>
     </div>
   </nav>
-  <h1>Instax Bérlés </h1>
   
-<div class="container text-center">
-    <div class="row">
-      <div class="col-sm">
-        <button><a href="EAindex.html">Főoldal</a></button>
-      </div>
-      <div class="col-sm">
-        <button><a href="Rolunk.html">Rólunk</a></button>
-      </div>
-      <div class="col-sm">
-        <button><a href="Csomagajánlataink.html">Csomagajánlataink</a></button>
-      </div>
+  <div class="szünet"> </div>
+  <h1>Instax és fotófal bérlés</h1>
+
+  <div class="szünet"> </div>
+
+
+  <h2>Dobd fel esküvőd hangulatát, hagyd hogy kedvükre szelfizzenek a vendégeid!</h2>
+  <h2>Mire észbe kapsz már el is készítsék Neked az esküvői vendégkönyvet!</h2>
+  <div class="szünet"> </div>
+  <div class="row align-items-center">
+    <div class="col-6 col-md-4"><img src="IMG/Kézműves/instax_mini11.png" alt="instax_mini11"></div>
+    <div class="col-12 col-md-8" class="középszöveg">
+      <p>Az Insta Mini 11 et a legkisebbektől a legídősebb krosztályig bárki könnyedén tudja használni.
+      </p>
     </div>
+  </div>
+
+  <div class="szünet"> </div>
+
+  </div>
   </div>
 
 </body>
