--- a/Kapcsolat.html
+++ b/Kapcsolat.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kapcsolat</title>
+  <link rel="stylesheet" href="css\bootstrap.css">
   <link rel="stylesheet" href="css\style.css">
 </head>
 
@@ -26,24 +27,29 @@
       <button><a href="Kapcsolat.html">Kapcsolat</a></button>
     </div>
   </nav>
+
+  <div class="szünet"> </div>
   <h1>Kapcsolat</h1>
+  <div class="szünet"> </div>
   <p>Bármilyen kérdés esetén keress meg bizalommal az alábbi eléárhetőségeim egyikén vagy töltsd ki az alábbi űrlapot és
     felveszem Veled a kapcsolatot egy neked alkalmas időpontban. </p>
   <p class="üdv">Üdvözlettel:</p>
   <p class="signo">Horváthné Forgács Eszter</p>
+  <div class="szünet"> </div>
   <h1>Kapcsolat felvétel</h1>
+  <div class="szünet"> </div>
   <div class="urlap">
     <form>
       <legend>Személyes adatok</legend>
-      <fieldset>
-        <div class="urlapmezo">
-          <label for="name">Név: *</label>
-          <input class="input" id="name" type="text" required>
-        </div>
-        <div class="urlapmezo">
-          <label for="Esküvői szerep">Esküvői szerep: *</label>
-          <input class="input" id="Esküvői szerep" type="text" required>
-        </div>
+
+      <div class="urlapmezo">
+        <div><label for="name">Név: *</label></div>
+        <div><input class="input" id="name" type="text" required></div>
+      </div>
+      <div class="urlapmezo">
+        <label for="Esküvői szerep">Esküvői szerep: *</label>
+        <input class="input" id="Esküvői szerep" type="text" required>
+      </div>
       </fieldset>
       <div class="urlapmezo">
         <label for="time">Esküvő tervezett dátuma : *</label>
