--- a/Korábbi munkáink.html
+++ b/Korábbi munkáink.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Korábbi munkáink </title>
-  <link rel="stylesheet" href="css\style.css">
-  <link rel="stylesheet" href="css\bootstrap.min.css">
 
+  <link rel="stylesheet" href="css\bootstrap.min.css">
+  <link rel="stylesheet" href="css\style.css">
 </head>
 
 <body>
@@ -28,6 +28,8 @@
       <button><a href="Kapcsolat.html">Kapcsolat</a></button>
     </div>
   </nav>
+  
+  <div class="szünet"> </div>
   <h1>Korábbi munkáink</h1>
 
   <p> Íme egy kis ízelítő, gyönyörű kézzel készített dekorációinkból és esküvői kellékeinkből. </p>
