--- a/Instax bérlés.html
+++ b/Instax bérlés.html
@@ -1,21 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instax bérlés</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Instax bérlés</title>
+
+  <link rel="stylesheet" href="css\bootstrap.css">
+  <link rel="stylesheet" href="css\style.css">
 </head>
+
 <body>
+  <div class="divEAlogo">
+    <img class="EAlogo" src="IMG/Ever After logo.png" alt="EA logó">
+    <p class="divEAlogo">"Lenyűgöző dekorációk egy kis eleganciával és tengernyi kreativitással!"</p>
+  </div>
 
-  <a href="EAindex.html" >Főoldal</a>
-  <a href="Rolunk.html" >Rólunk</a>
-  <a href="Csomagajánlataink.html" >Csomagajánlataink</a>
-  <a href="Instax bérlés.html" >Instax bérlés</a>
-  <a href="Korábbi munkáink.html" >Korábbi munkáink</a>
-   <a href="Instax bérlés.html" >Instax bérlés</a>
-   <a href="Kapcsolat.html" >Kapcsolat</a>
-  <h1>Instax Bérlés  </h1>
+  <nav>
+    <div class="navEA">
+      <button><a href="EAindex.html">Főoldal</a></button>
+      <button><a href="Rolunk.html">Rólunk</a></button>
+      <button><a href="Csomagajánlataink.html">Csomagajánlataink</a></button>
+      <button><a href="Egyedi kézműves termékeink.html">Egyedi kézműves dekorációk</a></button>
+      <button> <a href="Korábbi munkáink.html">Korábbi munkáink</a></button>
+      <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+      <button><a href="Kapcsolat.html">Kapcsolat</a></button>
+    </div>
+  </nav>
 
+  <div class="szünet"> </div>
+  <h1>Instax és fotófal bérlés</h1>
+  <div class="szünet"> </div>
+
+  <h2>Dobd fel az esküvőd hangulatát és hívd meg a vendégeidet egy szelfire!</h2>
+  <div class="szünet"> </div>
+  <div class="szünet"> </div>
+
+  <div class="row align-items-center">
+    <div class="col-12 col-md-8" class="középszöveg">
+      <p class="bold" style="text-align: left;">Miért jó az Instax gép?</p>
+      <p>• A profi fotós úgyis lencsevégre kap minden megható, tökéletes pillanatot, az Instax géppel pedig pillanatok
+        alatt megörökíthetsz minden mást!</p>
+      <p>• Nem kell napokat várnod a képek előhívásra/nyomtatásra- azonnal a kezedbe van lesz a kész fénykép, </p>
+      <p>• Legkisebbektől a legidősebb korosztályig bárki könnyedén tudja használni, csupán egyetlen gombot kell
+        megnyomni!</p>
+      <p>• Nem kell szaktudás a szép képekhez: a fényképező automatikusan a környezeti viszonyokhoz optimalizálja
+        magát</p>
+      <p>• Nem kell várakozni, hogy sorra kerülj a fotósnál, mindenki akkor használhatja a gépet, amikor kedve van
+        hozzá. </p>
+      <p>• Mire vége az esküvőnek már a kezedben is lesz egy egyedi életre szóló emlék.</p>
+      <p class="bold"> • Retró élmény a felnőtteknek, újdonság a gyerekeknek! </p>
+    </div>
+    <div class="col-6 col-md-4"><img src="IMG/Kézműves/instax_mini11.png" alt="instax_mini11"></div>
+  </div>
+
+  <h4>A vidám hangulat és spontán és vicces felvételek garantáltak!</h4>
+  <div class="szünet"> </div>
+
+  <div class="szünet"> </div>
+  <h2> Bérelj tőlünk Instax gépet és hagyd, hogy kedvükre szelfizzenek a vendégeid!</h2>
+  <div class="szünet"> </div>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <p class="bold">Miért tőlünk béreld?</p>
+        <p>- Fix kiszámítható áron dolgozunk, nincsenek rejtett költségek</p>
+        <p>- Bérelhetsz mellé vicces kiegészítőket</p>
+        <p>- Vagy bérelhetsz gyönyörű fotófalat</p>
+        <p>- Vásárolhatsz tőlünk hozzávaló filmet, hogy ne kelljen ezért is külön szaladgálnod </p>
+        <p>- A tőlünk vásárolt és fel nem használt, bontalan film-csomagokat eredeti áron visszavásároljuk, a gép
+          visszaadásakor</p>
+        <p>- Ha minket bízol meg esküvőd dekorálással a gépet a vicces kiegészítőkkel együtt kivisszük az esküvőd napján
+          AJÁNDÉKBA.</p>
+      </div>
+      <div class="col">
+
+        <p class="bold">Mitől olyan különleges egy Instax vendégkönyv?</p>
+        <p>• Hát természetesen vendégeidtől!</p>
+        <p>• Mindenki egyénisége ott lesz az Instax képén </p>
+        <p>• A képekhez pedig személyes jókívánság vagy vicces hozzászólás is jár. </p>
+        <p>• A profi fotós által készített beállított tökéletes képek után évek múlva igazi felüdülés lesz átlapoznod az
+          Instax-emlékkönyvedet, hogy lásd micsoda buli is volt aznap!</p>
+        <p>• És hogy hol tudnál ilyet szerezni? Ne aggódj nálunk még van készleten!</p>
+
+      </div>
+    </div>
+
+    <div class="szünet"> </div>
+    <h2>Mire észbe kapsz már el is készítsék Neked az esküvői vendégkönyvet!</h2>
+    <div class="szünet"> </div>
+
+
+
+    <div class="szünet"> </div>
+    <h4>Csak töltsd ki az igénylőlapot vagy hívj minket telefonon!</h4>
+    <div class="szünet"> </div>
+
+
+
+    <div class="bérl"></div>
+    <h2>Áraink:</h2>
+
+
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <ul>
+            <p class="bold">Instax gép kölcsönzés:</p>
+            <li>1 napra: 5.500 Ft </li>
+            <li>2 napra: 10.000 Ft</li>
+            <li>Egész hétvégére (péntek délutántól hétfő reggelig): 13.000 Ft</li>
+            <li>Kaució: 40 000 Ft</li>
+          </ul>
+          <ul>
+            <p class="bold">Instax filmek ára:</p>
+            <li>1 csomag: 3.600 Ft (10 db-os)</li>
+            <li>1 csomag: 7.200 Ft (20 db-os)</li>
+          </ul>
+
+          <ul>
+            <p class="bold">Instax vendégkönyv (többféle kivitelben):</p>
+            <li>Kicsi :3.500 Ft</li>
+            <li>Nagy: 5.000 Ft</li>
+          </ul>
+        </div>
+
+        <div class="col">
+          <ul>
+            <p class="bold">Instax filmek ára:</p>
+            <li>Kis csomag: 3.000 Ft</li>
+            <li>Party kiszerelés: 5.000 Ft</li>
+            <li>Tematikus csomag: 10.000 Ft</li>
+          </ul>
+
+          <ul>
+            <p class="bold">Fotótófal bérlés:</p>
+            <li>1 napra: 30.000 Ft (+szállítás költség)</li>
+            <li>Egész hétvégére (péntek délutántól hétfő reggelig): 45.000 Ft (+szállítás költség)</li>
+          </ul>
+        </div>
+
+
+        <div>
+          <ul>
+            <p class="bold">Az instax bérlés feltételei: Nem csak esküvőkre!</p>
+            <li>A gép jelenleg csak fehér színben elérhető</li>
+            <li>Hogy biztosan rendelkezésedre álljon a gépünk foglald le!</li>
+            <li> Jó előre az esküvőd napjára. A szabad időpontokról érdeklődj telefonon vagy emailben!</li>
+            <li>18 év feletti életkor </li>
+            <li>Állandó magyarországi lakcímm és érvényes igazolvánnyal
+            <li>Kaució átadása (40.000 Ft mely hibátlan leadáskor visszajár)</li>
+            </li>
+            <li>Bérleti szerződés aláírása</li>
+            <li>gépek átvétele személyesen: Budapesten, a Páskomliget utcában.
+            <li>Ha 6 csomagnál több filmre lesz szükséged kérlek, a bérlés előtt egy héttel előbb jelezd felénk.
+            <li>Kauciót kizárólag készpénzben fogadjuk el!</li>
+            <li>Napi bérlésél minden megkezdett 24 órát számolunk.</li>
+            <li>Hétvégi bérlés esetén az utolsó munkanapon 12:00 és 18:00 között lehet átvenni az eszközt és legkésőbb a
+              hétvégét követő első munkanap 12:00-ig kell azt leadni</li>
+            </li>
+            <li>Az átvétel pontos időpontja miatt előzetes telefonos vagy email egyeztetés szükséges!</li>
+          </ul>
+        </div>
+
+
+        <div class="szünet"> </div>
+
+      </div>
+      <p class="bold"> Ha bármi kérdésed van az Instax bérléssel kapcsolatban keress bátran
+        emailen: everafter.eskuvoidekor@gmail.com
+        vagy a 06-30-630-3870 telefonszámon!</p>
+    </div>
+    <a href="Instax bérlés.html">
+      <h3> Örömteli kattintgatásra fel!</h3>
+    </a>
 </body>
+
 </html>
