--- a/Kapcsolat.html
+++ b/Kapcsolat.html
@@ -1,22 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kapcsolat</title>
-</head>
-<body>
-    <a href="EAindex.html" >Főoldal</a>
-    <a href="Rolunk.html" >Rólunk</a>
-    <a href="Csomagajánlataink.html" >Csomagajánlataink</a>
-    <a href="Instax bérlés.html" >Instax bérlés</a>
-    <a href="Korábbi munkáink.html" >Korábbi munkáink</a>
-     <a href="Instax bérlés.html" >Instax bérlés</a>
-     <a href="Kapcsolat.html" >Kapcsolat</a>
 
-   <h1>Kapcsolat</h1>
-  
-  
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kapcsolat</title>
+  <link rel="stylesheet" href="css\bootstrap.css">
+  <link rel="stylesheet" href="css\style.css">
+</head>
+
+<body>
+  <div class="divEAlogo">
+    <img class="EAlogo" src="IMG/Ever After logo.png" alt="EA logó">
+    <p class="divEAlogo">"Lenyűgöző dekorációk egy kis eleganciával és tengernyi kreativitással!"</p>
+
+  </div>
+  <nav>
+    <div class="navEA">
+      <button><a href="EAindex.html">Főoldal</a></button>
+      <button><a href="Rolunk.html">Rólunk</a></button>
+      <button><a href="Csomagajánlataink.html">Csomagajánlataink</a></button>
+      <button><a href="Egyedi kézműves termékeink.html">Egyedi kézműves dekorációk</a></button>
+      <button> <a href="Korábbi munkáink.html">Korábbi munkáink</a></button>
+      <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+      <button><a href="Kapcsolat.html">Kapcsolat</a></button>
+    </div>
+  </nav>
+
+  <div class="szünet"> </div>
+  <h1>Kapcsolat</h1>
+  <div class="szünet"> </div>
+  <p>Bármilyen kérdés esetén keress meg bizalommal az alábbi eléárhetőségeim egyikén vagy töltsd ki az alábbi űrlapot és
+    felveszem Veled a kapcsolatot egy neked alkalmas időpontban. </p>
+  <p class="üdv">Üdvözlettel:</p>
+  <p class="signo">Horváthné Forgács Eszter</p>
+  <div class="szünet"> </div>
+  <h1>Kapcsolat felvétel</h1>
+  <div class="szünet"> </div>
+  <div class="urlap">
+    <form>
+      <legend>Személyes adatok</legend>
+
+      <div class="urlapmezo">
+        <div><label for="name">Név: *</label></div>
+        <div><input class="input" id="name" type="text" required></div>
+      </div>
+      <div class="urlapmezo">
+        <label for="Esküvői szerep">Esküvői szerep: *</label>
+        <input class="input" id="Esküvői szerep" type="text" required>
+      </div>
+      </fieldset>
+      <div class="urlapmezo">
+        <label for="time">Esküvő tervezett dátuma : *</label>
+        <input class="input" id="time" type="text" required>
+      </div>
+      <div class="urlapmezo">
+        <label for="place">Esküvő tervezett helyszíne : </label>
+        <input class="input" id="place" type="text" required>
+      </div>
+      <div class="urlapmezo">
+        <label for="létszám">Tervezett létszám: *</label>
+        <input class="input" id="létszám" type="text" required>
+      </div>
+      <div class="urlapmezo">
+        <label for="hívás">Visszahívást kérek: : *</label>
+        <input class="input" id="hívás" type="checkbox" required>
+      </div>
+      <div class="urlapmezo">
+        <label for="phone">Telefonszám *</label>
+        <input class="input" id="phone" type="text" required>
+      </div>
+      <div class="urlapmezo">
+        <label for="phone time">Visszahívásra alkalmas időpontok: *</label>
+        <input class="input" id="phone time" type="text" required>
+      </div>
+      <div class="urlapmezo">
+        <label for="Megjegyzés">Megjegyzés: </label>
+        <input class="input" id="Megjegyzés" type="text" required>
+      </div>
+
+      <div><button><a href="Kapcsolat.html">Beküld</a></button>
+      </div>
+
+
+    </form>
+
+
+
+
+
+
+
+  </div>
+
+  </p>
 </body>
+
 </html>
