--- a/Rolunk.html
+++ b/Rolunk.html
@@ -6,19 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rólunk</title>
+    <link rel="stylesheet" href="css\bootstrap.css">
+    <link rel="stylesheet" href="css\style.css">
 </head>
 
 <body>
-    <ul>
-        <li><a href="EAindex.html">Főoldal</a></li>
-        <li><a href="Rolunk.html">Rólunk</a></li>
-        <li><a href="Csomagajánlataink.html">Csomagajánlataink</a></li>
-        <li><a href="Instax bérlés.html">Instax bérlés</a></li>
-        <li><a href="Korábbi munkáink.html">Korábbi munkáink</a></li>
-        <li><a href="Instax bérlés.html">Instax bérlés</a></li>
-        <li><a href="Kapcsolat.html">Kapcsolat</a></li>
-    </ul>
+    <div class="divEAlogo">
+        <img class="EAlogo" src="IMG/Ever After logo.png" alt="EA logó">
+        <p class="divEAlogo">"Lenyűgöző dekorációk egy kis eleganciával és tengernyi kreativitással!"</p>
+
+    </div>
+    <nav>
+        <div class="navEA">
+          <button><a href="EAindex.html">Főoldal</a></button>
+          <button><a href="Rolunk.html">Rólunk</a></button>
+          <button><a href="Csomagajánlataink.html">Csomagajánlataink</a></button>
+          <button><a href="Egyedi kézműves termékeink.html">Egyedi kézműves dekorációk</a></button>
+          <button> <a href="Korábbi munkáink.html">Korábbi munkáink</a></button>
+          <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+          <button><a href="Kapcsolat.html">Kapcsolat</a></button>
+        </div>
+      </nav>
+
+    <div class="szünet"> </div>
     <h1>Rólunk</h1>
+    <div class="szünet"> </div>
     <p>Mint bemutatkozó szövegünkben említettük egy friss startup vállalkozásként tekintünk magunkra és testvéri-baráti
         összefogással hoztuk létre kisvállalkozói csapatunkat.
         Négytagú teamként a dekoráció területén dolgozunk együtt, de külön-külön is vannak olyan területek amelyekben
@@ -26,74 +38,139 @@
         vagy önálló szolgáltatásként.
         Ezért engedjétek meg, hogy egy kicsit jobban bemutassam a Ever After Esküvői dekor csapatát!
     </p>
+    <div class="szünet"> </div>
     <h2>Adorján Dávid - a Ceremóniák mestere</h2>
-    <img with="75" src="IMG/Profil képek/AD.jpg" alt="Adorján">
-    <h3>A dekorációk készítése mellett a rendezvények ceremóniák levezénylése az, amiben igazán tehetséges.</h3>
-    <p>Az esküvőn ceremóniamester segítsége nélkül sokkal nehezebben boldogulunk, hiszen a menyasszony és a vőlegény
-        azért jönnek, hogy fogadalmat tegyenek egymásnak a szeretteik körében és temérdek kötelezettségük mellett is
-        igyekeznek minden vendégüknek szentelni néhány percet szorosan beosztott idejükből. A násznép pedig azért
-        érkezik, hogy tanúja legyen a pár boldogságának, a fiatalokkal együtt ünnepelve élvezze az esküvőt. Így nehezen
-        elvárható bármelyik féltől is, hogy többi feladata kárára azzal is foglalkozzon, hogy időben tájékoztassa a
-        násznépet a napirendről, levezesse az esküvői játékokat, időzítse a szertartási bevonulást, a közös
-        fényképezkedést, a vacsorát, a torta felszolgálását, a táncot, játékokat és az egyéb programelemeket. És ezeken
-        felül válaszoljon a násznép technikai kérdéseire és megoldjon bármilyen felmerülő nehézséget vagy akár olyan
-        apróságot is minthogy a megfelelő időben húzzon elő a mellényzsebéből egy mini varrókészletet vagy üres
-        borítékot a vészhelyzetek kezelésére. (kicsit soknak érzem) Dávid ezeken a feladatokon túlmenően is tökéletesen
-        udvarias és közvetlen ceremónia mesterként, a fiatal pár igényeinek megfelelően kellemes-vidám hangulatban
-        vezényli le a nagy nap minden részletét anélkül, hogy azon az ifjú házasoknak egy percig is aggódniuk kéne.
-        Ceremóniamesterünk szívesen áll az ifjú párok szolgálatára, csak hívják fel bizalommal és egy kötetlen
-        beszélgetés során megbizonyosodhatnak róla, hogy amint ő kezébe veszi a ceremóniát onnantól minden rendben lesz.
-    </p>
-    <img src="IMG/Profil képek/FP.jpg" alt="Péter">
+
+    <h3>A dekorációk készítése mellett a rendezvények ceremóniák levezénylése az, amiben igazán tehetséges.
+    </h3>
+    <div class="szünet"> </div>
+    <div class="row align-items-center">
+        <div class="col-6 col-md-4"><img with="75" src="IMG/Profil képek/AD.jpg" alt="Dávid"></div>
+        <div class="col-12 col-md-8" class="középszöveg">
+
+            <p>Az esküvőn ceremóniamester segítsége nélkül sokkal nehezebben boldogulunk, hiszen a menyasszony és a
+                vőlegény
+                azért jönnek, hogy fogadalmat tegyenek egymásnak a szeretteik körében és temérdek kötelezettségük
+                mellett is
+                igyekeznek minden vendégüknek szentelni néhány percet szorosan beosztott idejükből. A násznép pedig
+                azért
+                érkezik, hogy tanúja legyen a pár boldogságának, a fiatalokkal együtt ünnepelve élvezze az esküvőt. Így
+                nehezen
+                elvárható bármelyik féltől is, hogy többi feladata kárára azzal is foglalkozzon, hogy időben
+                tájékoztassa a
+                násznépet a napirendről, levezesse az esküvői játékokat, időzítse a szertartási bevonulást, a közös
+                fényképezkedést, a vacsorát, a torta felszolgálását, a táncot, játékokat és az egyéb programelemeket. És
+                ezeken
+                felül válaszoljon a násznép technikai kérdéseire és megoldjon bármilyen felmerülő nehézséget vagy akár
+                olyan
+                apróságot is minthogy a megfelelő időben húzzon elő a mellényzsebéből egy mini varrókészletet vagy üres
+                borítékot a vészhelyzetek kezelésére. (kicsit soknak érzem) Dávid ezeken a feladatokon túlmenően is
+                tökéletesen
+                udvarias és közvetlen ceremónia mesterként, a fiatal pár igényeinek megfelelően kellemes-vidám
+                hangulatban
+                vezényli le a nagy nap minden részletét anélkül, hogy azon az ifjú házasoknak egy percig is aggódniuk
+                kéne.
+                Ceremóniamesterünk szívesen áll az ifjú párok szolgálatára, csak hívják fel bizalommal és egy kötetlen
+                beszélgetés során megbizonyosodhatnak róla, hogy amint ő kezébe veszi a ceremóniát onnantól minden
+                rendben lesz.
+            </p>
+        </div>
+
+    </div>
+    <div class="szünet"> </div>
+
     <h2>Forgács Péter - A sokszínű művészünk</h2>
+
 
     <h3>Nemcsak a dekor területén vannak remekművei, de csodálatos képeket fest megrendelésre is és a kézművesség számos
         műfajában alkot gyönyörűségeket.</h3>
-    <p>Vitathatatlanul a legjobb testvér, aki autodidakta módon sajátította el valamennyi őt érdeklő képzőművészeti ág
-        csínját-bínját.
-        Nemcsak a dekor területén vannak remekművei, de csodálatos képeket fest megrendelésre is és a kézművesség számos
-        műfajában alkot gyönyörűségeket.
-        Az alábbi képeken láthattok tőle néhány nagyon édes tűnemezelt „plüss” állatkát, igen bizony mind kézzel készült
-        még a kutyus is.
-        Láthattok néhány ceruzarajzot. Makettgyurmából készült különböző figurákat.
-        És a halloweeni maszkok/sminkek elkészítésében is félelmetesen tehetséges, ha te akarsz lenni a leg ijesztőbb
-        egy jelmezes buliban bátran már hetekkel előtte keresd fel és készülj fel, hogy a Party napján nem mersz majd
-        tükörbe nézni, de mégis mindenki veled akar majd fotózkodni. -szerintem picit eltér a tárgytól D.
-        Ha szeretnél akár szülőköszöntő ajándéknak vagy az ifjú párnak nászajándékként egy gyönyörű festményt vagy más
-        kézműves terméket rendelni tőle a WWW.XXXX oldalon megtalálod őt.
-
-    </p>
-
+    <div class="szünet"> </div>
+    <div class="row align-items-center">
+        <div class="col-6 col-md-4"><img src="IMG/Profil képek/FP.jpg" alt="Péter"></div>
+        <div class="col-12 col-md-8" class="középszöveg">
+            <p>Vitathatatlanul a legjobb testvér, aki autodidakta módon sajátította el valamennyi őt érdeklő
+                képzőművészeti
+                ág
+                csínját-bínját.
+                Nemcsak a dekor területén vannak remekművei, de csodálatos képeket fest megrendelésre is és a
+                kézművesség
+                számos
+                műfajában alkot gyönyörűségeket. </p>
+            <p>Az alábbi képeken láthattok tőle néhány nagyon édes tűnemezelt „plüss” állatkát, igen bizony mind kézzel
+                készült
+                még a kutyus is.
+                Láthattok néhány ceruzarajzot. Makettgyurmából készült különböző figurákat.
+                És a halloweeni maszkok/sminkek elkészítésében is félelmetesen tehetséges, ha te akarsz lenni a leg
+                ijesztőbb
+                egy jelmezes buliban bátran már hetekkel előtte keresd fel és készülj fel, hogy a Party napján nem mersz
+                majd
+                tükörbe nézni, de mégis mindenki veled akar majd fotózkodni. -szerintem picit eltér a tárgytól D.
+                Ha szeretnél akár szülőköszöntő ajándéknak vagy az ifjú párnak nászajándékként egy gyönyörű festményt
+                vagy
+                más
+                kézműves terméket rendelni tőle a WWW.XXXX oldalon megtalálod őt.</p>
+        </div>
+    </div>
+    <div class="szünet"> </div>
     <h2>Hazafi János – tehetséges Webdesignerünk</h2>
-    <h3>Egy ideje már modernebbnél modernebb elegáns, de áttekinthető honlapok készítésével foglalkozik és bizony a mi
+
+    <h3>Egy ideje már modernebbnél modernebb elegáns, de áttekinthető honlapok készítésével foglalkozik és
+        bizony a mi
         csodás honlapunk is az ő keze munkáját na és persze szaktudását dicséri.</h3>
-    <p>Ha tetszik a honlapunk kialakítása, vagy csak egyszerűen nem ismersz senkit, aki megbízhatóan és korrekt áron
-        elkészítene neked egy honlapot, akár a blogodnak, vagy a vállalkozásodnak, esetleg pont az esküvődre szeretnél
-        egy emlékoldalt? Javaslom, hogy ne keresgélj tovább mert megtaláltad az emberedet. Érdeklődni és árajánlatot
-        kérni személyesen tőle az XXX elérhetőségen tudsz.
-        Jani mint a csapat legfiatalabb titánja, igazi digitális bennszülött, aki tárgyfotók készítését, az esküvők
-        technikai hátterének (hangfalak, projektorok kezelése) biztosítását és fuvarozást is egyaránt vállal.
+    <div class="szünet"> </div>
+    <div class="row align-items-center">
+        <div class="col-6 col-md-4"><img alt="Jancsika"></div>
+        <div class="col-12 col-md-8" class="középszöveg">
+
+
+            <p>Ha tetszik a honlapunk kialakítása, vagy csak egyszerűen nem ismersz senkit, aki megbízhatóan és korrekt
+                áron
+                elkészítene neked egy honlapot, akár a blogodnak, vagy a vállalkozásodnak, esetleg pont az esküvődre
+                szeretnél
+                egy emlékoldalt? Javaslom, hogy ne keresgélj tovább mert megtaláltad az emberedet. Érdeklődni és
+                árajánlatot
+                kérni személyesen tőle az XXX elérhetőségen tudsz.
+                Jani mint a csapat legfiatalabb titánja, igazi digitális bennszülött, aki tárgyfotók készítését, az
+                esküvők
+                technikai hátterének (hangfalak, projektorok kezelése) biztosítását és fuvarozást is egyaránt vállal.
+        </div>
+    </div>
     </p>
-    <img src="IMG/Profil képek/HFE.jpg" alt="Eszter">
+    <div class="szünet"> </div>
     <h2>Horváthné Forgács Eszter a szavak mesternője</h2>
-    <h3>A szervezési feladatok mellett a kreatív írásban, a szavak mondatok kusza ösvényein sétálva bontakoztatja ki
+
+    <h3>A szervezési feladatok mellett a kreatív írásban, a szavak mondatok kusza ösvényein sétálva
+        bontakoztatja ki
         leginkább szövegírói tehetségét, így weblapunk szövegei is szinte mind az ő tollából származnak.</h3>
-    <p>„Gyakran előfordul, hogyha előbb nem is de az esküvő szervezése során az internetes esküvői cikkeket bújva
-        rádöbbenünk, hogy szeretnénk egy fogadalmat mondani a kedvesünknek, de hiába érezzük a szívünkben azt a gyönyörű
-        vibráló érzést, amiért össze akarjuk kötni vele az életünket egyszerűen nem tudjuk azt szavakba önteni azt.
-        Csak ülünk egy üres papír felett órákon át majd végül hosszú kínlódás után csak annyit bírunk leírni: nagyon
-        szeretlek… és persze tudjuk, hogy ez így van, de esetleg azt érezzük, hogy ez olyan snassz így, hogy lehetne
-        árnyaltabban jobban is, majd félretesszük a lapot hisz lesz még idő az eskü szövegét megírni.
-        Aztán mikor elmegyünk az anyakönyvvezetőhöz aki azt kéri, hogy a találkozásunk, kapcsolatunk történetét is mi
-        írjuk meg neki, hogy ő úgy, változatlan formában felolvashassa egy újabb aggódó ránc jelenik meg a homlokunkon,
-        de majd valahogy megoldjuk, nem?
-        Végül egyik nap valamelyik rokonunk finoman még azt is eszünkbe juttatja, hogy a vacsoránál is „illene”
-        valamilyen köszöntő beszédet mondani az ifjú párnak.
-        És talán ez lesz az a pont, ami a kétségbeesés szélére sodor minket és legszívesebben hagynánk az egészet a
-        viharba.
 
-    </p>
+    <div class="row align-items-center">
+        <div class="col-6 col-md-4"><img src="IMG/Profil képek/HFE profil_3.jpg" alt="Eszter"></div>
+        <div class="col-12 col-md-8" class="középszöveg">
+            <p>Gyakran előfordul, hogyha előbb nem is de az esküvő szervezése során az internetes esküvői cikkeket
+                bújva
+                rádöbbenünk, hogy szeretnénk egy fogadalmat mondani a kedvesünknek, de hiába érezzük a szívünkben azt a
+                gyönyörű
+                vibráló érzést, amiért össze akarjuk kötni vele az életünket egyszerűen nem tudjuk azt szavakba önteni
+                azt.</p>
+            <p> Csak ülünk egy üres papír felett órákon át majd végül hosszú kínlódás után csak annyit bírunk leírni:
+                nagyon
+                szeretlek… és persze tudjuk, hogy ez így van, de esetleg azt érezzük, hogy ez olyan snassz így, hogy
+                lehetne
+                árnyaltabban jobban is, majd félretesszük a lapot hisz lesz még idő az eskü szövegét megírni.
+                Aztán mikor elmegyünk az anyakönyvvezetőhöz aki azt kéri, hogy a találkozásunk, kapcsolatunk történetét
+                is mi
+                írjuk meg neki, hogy ő úgy, változatlan formában felolvashassa egy újabb aggódó ránc jelenik meg a
+                homlokunkon,
+                de majd valahogy megoldjuk, nem?</p>
+            <p> Végül egyik nap valamelyik rokonunk finoman még azt is eszünkbe juttatja, hogy a vacsoránál is „illene”
+                valamilyen köszöntő beszédet mondani az ifjú párnak.
+                És talán ez lesz az a pont, ami a kétségbeesés szélére sodor minket és legszívesebben hagynánk az
+                egészet a viharba.
+            </p>
+        </div>
+    </div>
 
+    <div class="szünet"> </div>
 </body>
 
 </html>
