--- a/Csomagajánlataink.html
+++ b/Csomagajánlataink.html
@@ -6,59 +6,123 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Csomagajánlataink</title>
+    <link rel="stylesheet" href="css\style.css">
 </head>
 
 <body>
-    <a href="EAindex.html">Főoldal</a>
-    <a href="Rolunk.html">Rólunk</a>
-    <a href="Csomagajánlataink.html">Csomagajánlataink</a>
-    <a href="Instax bérlés.html">Instax bérlés</a>
-    <a href="Korábbi munkáink.html">Korábbi munkáink</a>
-    <a href="Instax bérlés.html">Instax bérlés</a>
-    <a href="Kapcsolat.html">Kapcsolat</a>
+    <div class="divEAlogo">
+        <img class="EAlogo" src="IMG/Ever After logo.png" alt="EA logó">
+        <p class="divEAlogo">"Lenyűgöző dekorációk egy kis eleganciával és tengernyi kreativitással!"</p>
 
-    <h1>Csomag ajánlataink</h1>
+    </div>
+    <nav>
+        <div class="navEA">
+          <button><a href="EAindex.html">Főoldal</a></button>
+          <button><a href="Rolunk.html">Rólunk</a></button>
+          <button><a href="Csomagajánlataink.html">Csomagajánlataink</a></button>
+          <button><a href="Egyedi kézműves termékeink.html">Egyedi kézműves dekorációk</a></button>
+          <button> <a href="Korábbi munkáink.html">Korábbi munkáink</a></button>
+          <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+          <button><a href="Kapcsolat.html">Kapcsolat</a></button>
+        </div>
+      </nav> 
 
-    <ul>
-        <li>Basic csomag</li>
-        <li>Classik Csomag</li>
-        <li>Endless Csomag</li>
-    </ul>
+  
 
-    <ol>
-        <li>Basic Csomag</li>
-        <li>Classik Csomag</li>
-        <li>Endless Csomag</li>
-    </ol>
-    <table>
-        <caption> <B>Csomag Ajánlataink</B></caption>
+
+    <h1>CSOMAG AJÁNLATAINK</h1>
+  <div class="szünet"> </div>
+    <div class="csháttér">
+        <h2>Vendéglétszám alapján</h2>
+        <ol>
+            <div class="csomagfels">
+                <li>Small: 30-60 fő </li>
+                <li>Medium 60-80 fő</li>
+                <li>Large 80-120 fő</li>
+            </div>
+        </ol>
+
+        <div class="szünet"> </div>
+        <h2>Csomag tartalma alapján</h2>
+        <div>
+            <button class="középre"><a href="EAindex.html">Basic Csomag</a></button>
+            <button class="középre"><a href="EAindex.html">Classic Csomag</a></button>
+            <button class="középre"><a href="EAindex.html">Exclusive Csomag</a> </button>
+        </div>
+    </div>
+
+
+    <table class="táblázat">
+        <caption> <B></B>
+            <h1>Csomag ajánlataink</h1></B>
+        </caption>
         <thead>
             <tr>
                 <th> Csomagok </th>
                 <th>Árkategória </th>
             </tr>
+            <tr>
+                <th>Csomagméret</th>
+                <th>Small</th>
+                <th>Megium</th>
+                <th>Large</th>
+            </tr>
+
         </thead>
         <tbody>
-            <tr>
-                <td>Basic</td>
-                <td> 80 000 Ft- 120 000 Ft</td>
-            <tr>
-                <td>Classic</td>
-                <td>120 000 Ft - 200 000 Ft</td>
+
+            <tr class="sor1">
+                <td rowspan=2>Basic</td>
+                <td>Basic-S</td>
+                <td>Basic-M</td>
+                <td>Basic-L</td>
             </tr>
-            <tr>
-                <td>Endless</td>
-                <td> 200 000 Ft-300 000F t</td>
+            <tr class="sor1">
+                <td>120.000 Ft-180.000 Ft</td>
+                <td>180.000 Ft- 240.000 Ft</td>
+                <td>240.000 Ft -360.000 Ft</td>
             </tr>
+            </tr>
+
+
+            <div class="sor">
+                <tr>
+                    <td rowspan=2>Classic</td>
+                    <td>Classic-S</td>
+                    <td>Classic-M</td>
+                    <td>Classic-L</td>
+                </tr>
+                <tr>
+                    <td>150.000 Ft - 220.000 Ft</td>
+                    <td>220.000 Ft - 290.000 ft</td>
+                    <td>290.000 Ft- 440.000 Ft</td>
+                </tr>
+            </div>
+            <div class="sor">
+                <tr>
+                    <td rowspan=2>Exclusive</td>
+                    <td>Exclusive-S</td>
+                    <td>Exclusive-M</td>
+                    <td>Exclusive-L</thd>
+                </tr>
+                <tr>
+                    <td>175.000 Ft - 255.000 Ft</td>
+                    <td>255.000 Ft - 340.000 Ft</td>
+                    <td>340.000 Ft - 550.000 Ft</td>
+                </tr>
+            </div>
+
         <tfoot>
             <tr>
-                <td colspan="2"> Áraink az ÁFÁ-t is tartalmazzák.</td>
+                <td colspan="2"> Áraink tájékoztató jellegűek, pontos árért kérjen árajánlatot.</td>
             </tr>
         </tfoot>
         </tbody>
 
 
     </table>
+    <table></table>
+    <div class="szünet">  </div>
 
 </body>
 
