--- a/EAindex.html
+++ b/EAindex.html
@@ -1,44 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ever After Esküvői Dekoráció</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ever After Esküvői Dekoráció</title>
+
+  <link rel="stylesheet" href="css\bootstrap.css">
+  <link rel="stylesheet" href="css\style.css">
 </head>
+
 <body>
-  <a href="EAindex.html" >Főoldal</a>
-     <a href="Rolunk.html" >Rólunk</a>
-     <a href="Csomagajánlataink.html" >Csomagajánlataink</a>
-     <a href="Instax bérlés.html" >Instax bérlés</a>
-     <a href="Korábbi munkáink.html" >Korábbi munkáink</a>
-      <a href="Instax bérlés.html" >Instax bérlés</a>
-      <a href="Kapcsolat.html" >Kapcsolat</a>
- <img src="IMG/Ever After logo.png" alt="EA logó">
-  <h1> Üdvözöllek Kedves Látogató,</h1>
+  <div class="divEAlogo">
+    <img class="EAlogo" src="IMG/Ever After logo.png" alt="EA logó">
+    <p class="divEAlogo">"Lenyűgöző dekorációk egy kis eleganciával és tengernyi kreativitással!"</p>
 
-<h1> Kedves Menyasszony és Vőlegény!</h1>
-<h2><b>Azaz kedves leendő ifjú Feleség és Férj!</b> </h2>
+  </div>
+  <nav>
+    <div class="navEA">
+      <button><a href="EAindex.html">Főoldal</a></button>
+      <button><a href="Rolunk.html">Rólunk</a></button>
+      <button><a href="Csomagajánlataink.html">Csomagajánlataink</a></button>
+      <button><a href="Egyedi kézműves termékeink.html">Egyedi kézműves dekorációk</a></button>
+      <button> <a href="Korábbi munkáink.html">Korábbi munkáink</a></button>
+      <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+      <button><a href="Kapcsolat.html">Kapcsolat</a></button>
+    </div>
+  </nav>
 
-<p>Ever After Esküvői Dekor egy olyan főként esküvő dekorálásra szakosodott vállalkozás, amely szeretné, 
-  hogy minden jegyes pár az általa megálmodott csodálatos környezetben mondhassa ki az életüket összekötő boldogító igent,
-   anélkül, hogy aggódniuk kellene a dekorációval járó tervezési szervezési feladatok miatt és ezáltal arra figyelhessenek 
-   mind az esküvő előtti időszakban és az esküvő napján is, ami a legfontosabb: egymásra.</p>
+  <div class="szünet"> </div>
+  <h1> Üdvözöllek Kedves Látogató, Kedves Menyasszony és Vőlegény!</h1>
 
-<p>Őszintén megvallva mi egy kis startup cégként gondolunk magunkra, hiszen nagyon újak vagyunk még ezen a területen,
-   azonban komoly terveink vannak, mivel nagyon sok párnak szeretnénk minőségi, ízléses és egyedi dekorációval még csodálatosabbá varázsolni a házasságkötésüket. 
-   A hosszú évek profizmusát, kreatív megoldásokkal fiatalos ötletekkel, valamint végtelen lelkesedéssel pótoljuk minden munkánk során, 
-  a kézzel készített díszektől, a művészin megkötött székmasnikon át egészen a teremben elhelyezett utolsó virágsziromig
-<p> <b>Miért bízd ránk a dekorációt?</b></p> 
-<ul>
-  <li>a Ti álmaitokat fogjuk megvalósítani</li>
-  <li>részletekbe menő odafigyeléssel dolgozunk</li>
-  <li>ha csak elképzeléseid vannak segítünk megtalálni mi az ami igazán tetszene Nektek</li>
-  <li>fiatalos lendület</li>
-  <li>fiatalos lendület</li>
- 
-</ul>
-</p>
+  <div class="szünet"> </div>
+  <h2><b>Azaz kedves leendő ifjú Feleség és Férj!</b> </h2>
+  <div class="szünet"> </div>
+  
+  <div class="szünet"> </div>
+
+
+  <div class="row align-items-center">
+    <div class="col-12 col-md-8" class="középszöveg">
+      <h4> Ti megálmodjátok, mi megvalósítjuk!</h4>
+      <div class="szünet"> </div>
+      <p> Az <span class="bold">Ever After Esküvői Dekor </span> csapata felkészült minden lehetetlennek tűnő
+        dekorációs feladatra.</p>
+      <p>Válasszatok minket, Kedves Jegyespár és mindent megteszünk annak érdekében, hogy az általatok megálmodott
+        csodálatos környezetben mondhassátok ki az életteket összekötő
+        boldogító igent.</p>
+      <p> Mindezt pedig análkül, hogy aggódnotok kellene a dekorációval járó beszerzési, szervezési és kivitelezési
+        feladatok
+        miatt, mert megérdemlitek, hogy az esküvő előtti időszakban és főként az esküvő napján, arra figyelhessetek, ami
+        a legfontosabb: <span class="bold">egymásra.</span></p>
+    </div>
+    <div class="col-6 col-md-4"><img class="szövegkép" src="IMG/Háttérképek/főoldal.jpg" alt="főkép"></div>
+  </div>
+  <div class="szünet"> </div>
+
+  <div class="row align-items-center">
+    <div class="col-6 col-md-4"><img class="szövegkép" src="IMG/Kézműves/asztal_FE.jpg" alt="asztal_FE"></div>
+    <div class="col-12 col-md-8" class="szövegközép">
+      <p>Őszintén megvallva mi egy kis startup cégként gondolunk magunkra, hiszen nagyon újak vagyunk még ezen a
+        területen,
+        azonban komoly terveink vannak, mivel nagyon sok párnak szeretnénk minőségi, ízléses és egyedi dekorációval még
+        csodálatosabbá varázsolni a házasságkötésüket. </p>
+      <p> A hosszú évek profizmusát, kreatív megoldásokkal fiatalos ötletekkel, valamint végtelen lelkesedéssel pótoljuk
+        minden munkánk során, a kézzel készített díszektől, a művészin megkötött székmasnikon át egészen a teremben
+        elhelyezett utolsó
+        virágsziromig.</p>
+    </div>
+
+  </div>
+  <div class="szünet"> </div>
+  <div class="row align-items-center">
+    <div class="col-12 col-md-8" class="szövegközép">
+      <p class="bold"> Miért bízd ránk a dekorációt? </p>
+      <ul>
+        <li>A Ti álmaitokat fogjuk megvalósítani</li>
+        <li>Részletekbe menő odafigyeléssel dolgozunk</li>
+        <li>Ha csak elképzeléseid vannak segítünk megtalálni mi az ami igazán tetszene Nektek</li>
+        <li>fiatalos lendület</li>
+        <li>fiatalos lendület</li>
+      </ul>
+      <p>Sok ötletes és elegáns dekorációs elem és kellék áll rendelkezésre, csak hogy néhányat említsek: különböző
+        asztaldíszek, szülőköszöntő-, tanú felkérő ajándékok, szertartási kellékek, gyűrűtartók, tortaállványok,
+        autódíszek,
+        virágos hajcsatok, lampionok...stb. A lehetséges dekorválasztékot szinte a végtelenig - vagy legalábbis a
+        kreatív
+        menyasszonyok fantáziájának határáig- sorolhatnánk.</p> </div>
+    <div class="col-6 col-md-4"><img class="szövegkép" src="IMG/Háttérképek/terem1Ad.JPG" alt="terem_1"></div>
+  </div>
+  <div class="szünet"> </div>
+  <div class="középszöveg">
+    <p>Természetesen a fentieken kívül is bármit szívesen elkészítünk Nektek, hogy a nagy napotokon minden igazán
+      különleges legyen és a Ti egyéniségeteket tükrözze.</p>
+    <p> A teljes helyszíndekoráláson túl akár fotósarok és Instax mini 11 bérlést is tudunk biztosítani számotokra.
+    </p>
+    <p> Reméljük, elnyertük a tetszéseteket, így lehetőségünk nyílik dekorációnkkal még szebbé varázsolni az
+      esküvőtöket!
+    </p>
+    <p>Keressetek minket bátran e-mailen és telefonon!
+    </p>
+  </div>
+  <div> <img class="szövegkép" id="főasztal" src="IMG/Kézműves/Főasztal.JPG" alt="főasztal"> </div>
+  <div class="szünet"> </div>
+  <div class="szünet"> </div>
+  <h1>Kapcsolat</h1>
+  <div class="row align-items-center">
+    <div class="col-6 col-md-4"> <img src="IMG/Profil képek/HFE profil_2.JPG" alt="Eszter"></div>
+    <div class="col-12 col-md-8" class="szövegközép">
+      <p>"Ha kérdésed van keress meg bizalommal az alábbi elérhetőségeim egyikén vagy töltsd ki
+        a <button><a href="Kapcsolat.html">Kapcsolat</a></button>oldalon található űrlapot és felveszem Veled a
+        kapcsolatot, egy Neked alkalmas időpontban." </p>
+      <p class="üdv"> Üdvözlettel:</p>
+      <p class="signo">Horváthné Forgács Eszter</p>
+    </div>
+  </div>
+  <div class="szünet"> </div>
 
 </body>
+
 </html>
