--- a/Korábbi munkáink.html
+++ b/Korábbi munkáink.html
@@ -1,20 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Korábbi munkáink </title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Korábbi munkáink </title>
+
+  <link rel="stylesheet" href="css\bootstrap.min.css">
+  <link rel="stylesheet" href="css\style.css">
 </head>
+
 <body>
-   
-    <a href="EAindex.html" >Főoldal</a>
-    <a href="Rolunk.html" >Rólunk</a>
-    <a href="Csomagajánlataink.html" >Csomagajánlataink</a>
-    <a href="Instax bérlés.html" >Instax bérlés</a>
-    <a href="Korábbi munkáink.html" >Korábbi munkáink</a>
-    <a href="Instax bérlés.html" >Instax bérlés</a>
-    <a href="Kapcsolat.html" >Kapcsolat</a>
-   <h1>Korábbi munkáink</h1>
+  <div class="divEAlogo">
+    <img class="EAlogo" src="IMG/Ever After logo.png" alt="EA logó">
+    <p class="divEAlogo">"Lenyűgöző dekorációk egy kis eleganciával és tengernyi kreativitással!"</p>
+
+  </div>
+  <nav>
+    <div class="navEA">
+      <button><a href="EAindex.html">Főoldal</a></button>
+      <button><a href="Rolunk.html">Rólunk</a></button>
+      <button><a href="Csomagajánlataink.html">Csomagajánlataink</a></button>
+      <button><a href="Egyedi kézműves termékeink.html">Egyedi kézműves dekorációk</a></button>
+      <button> <a href="Korábbi munkáink.html">Korábbi munkáink</a></button>
+      <button><a href="Instax bérlés.html">Instax bérlés</a></button>
+      <button><a href="Kapcsolat.html">Kapcsolat</a></button>
+    </div>
+  </nav>
+  
+  <div class="szünet"> </div>
+  <h1>Korábbi munkáink</h1>
+
+  <p> Íme egy kis ízelítő, gyönyörű kézzel készített dekorációinkból és esküvői kellékeinkből. </p>
+  <div calss="imgSmall"><img src="IMG/Kézműves/ajándék.jpg" alt="ajándék">
+
+    <img src="IMG/Kézműves/Tábla.JPG" alt="tábla">
+    <img src="IMG/Kézműves/kellék.jpg" alt="kellék">
+  </div>
+  <div class="imgBig">
+    </divclass>> <img src="IMG/Kézműves/teremAd.JPG" alt="teremAd">
+    <img src="IMG/Kézműves/asztal_FE.jpg" alt="asztal">
+  </div>
+
+  <div class="imgBig"> <img src="IMG/Kézműves/Főasztal.JPG" alt="főasztal">
+    <img src="IMG/Kézműves/teremFE.jpg" alt="teremFE">
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <img src="IMG/Kézműves/Tábla.JPG" alt="tábla">
+      </div>
+      <div class="col-sm">
+        One of three columns
+      </div>
+      <div class="col-sm">
+        One of three columns
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      1 of 3
+    </div>
+    <div class="col">
+      2 of 3
+    </div>
+    <div class="col">
+      3 of 3
+    </div>
+
 </body>
+
 </html>
